# Point-Cloud-Grasp

./: LICENSE  README.md
gpd_ws/devel/: .catkin  local_setup.sh
gpd_ws/devel/include/gpd_ros/: CloudIndexed.h  CloudSamples.h  CloudSources.h  GraspConfig.h  GraspConfigList.h  SamplesMsg.h  detect_grasps.h  detect_graspsRequest.h  detect_graspsResponse.h
gpd_ws/devel/lib/gpd_ros/: detect_grasps  detect_grasps_server
gpd_ws/devel/lib/pkgconfig/: gpd_ros.pc
gpd_ws/devel/share/gpd_ros/cmake/: gpd_ros-msg-extras.cmake  gpd_ros-msg-paths.cmake  gpd_rosConfig.cmake
gpd_ws/devel/share/roseus/ros/gpd_ros/: manifest.l
roi_extractor/: CMakeLists.txt  package.xml
roi_extractor/CADMODEL/: cat_and_push.STL  stick_door_handle.STL  냉장고손잡이.STL
roi_extractor/include/roi_extractor/: handle_gen.h  handle_gen2.cpp
roi_extractor/include/roi_extractor/sampling/: antipodal.h  candidates_generator.h  eigen_utils.h  grasp.h  grasp_set.h  hand_search.h  point_list.h
roi_extractor/launch/: handle_sampling.launch
roi_extractor/roi_extractor/include/roi_extractor/: handle_gen.h
roi_extractor/roi_extractor/launch/: handle_sampling.launch
roi_extractor/roi_extractor/src/: 0.pcd  1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd  handle_gen.cpp
roi_extractor/src/: candidate_gen_server.cpp  doorsample1.pcd  handle_gen.cpp  main.cpp  roiExtractor.cpp
roi_extractor/src/sampling/: candidates_generator.cpp  finger_hand.cpp  grasp.cpp  grasp_set.cpp  hand_search.cpp
tracker_ws/devel/: .catkin  .rosinstall  setup.sh
tracker_ws/devel/include/gb_visual_detection_3d_msgs/: BoundingBox3d.h  BoundingBoxes3d.h
tracker_ws/devel/lib/darknet_ros/: darknet_ros
tracker_ws/devel/lib/darknet_ros_3d/: darknet3d_listener_node  darknet3d_node
tracker_ws/devel/lib/pkgconfig/: darknet_ros.pc  darknet_ros_3d.pc  darknet_ros_msgs.pc  gb_visual_detection_3d_msgs.pc
tracker_ws/devel/lib/roi_extractor/: roi_extractor_srv
tracker_ws/devel/share/darknet_ros/cmake/: darknet_rosConfig.cmake
tracker_ws/devel/share/darknet_ros_3d/cmake/: darknet_ros_3dConfig.cmake
tracker_ws/devel/share/darknet_ros_msgs/cmake/: darknet_ros_msgs-msg-paths.cmake  darknet_ros_msgsConfig.cmake
tracker_ws/devel/share/gb_visual_detection_3d_msgs/cmake/: gb_visual_detection_3d_msgs-msg-extras.cmake  gb_visual_detection_3d_msgs-msg-paths.cmake  gb_visual_detection_3d_msgsConfig.cmake
tracker_ws/devel/share/roi_extractor/cmake/: roi_extractor-msg-paths.cmake
tracker_ws/devel/share/roseus/ros/darknet_ros_msgs/: manifest.l
tracker_ws/devel/share/roseus/ros/gb_visual_detection_3d_msgs/: manifest.l
tracker_ws/devel/share/roseus/ros/roi_extractor/: manifest.l
tracker_ws/src/gb_visual_detection_3d-melodic/darknet_ros_3d/config/: darknet_3d.yaml
tracker_ws/src/gb_visual_detection_3d-melodic/darknet_ros_3d/launch/: darknet_ros_3d.launch
tracker_ws/src/roi_extractor/: CMakeLists.txt
tracker_ws/src/roi_extractor/src/: roiExtractor.cpp
updated/catkin_ws/devel/: .catkin  .rosinstall
updated/catkin_ws/devel/include/task_assembly/: BoundingBox3d.h  BoundingBoxes3d.h  door_open_planner.h  door_open_plannerRequest.h  door_open_plannerResponse.h  target.h
updated/catkin_ws/devel/lib/grasp_sampler/: GraspSamplerClient  GraspSamplerServer
updated/catkin_ws/devel/lib/pkgconfig/: franka_description.pc  grasp_sampler.pc  task_assembly.pc
updated/catkin_ws/devel/share/franka_description/cmake/: franka_descriptionConfig.cmake
updated/catkin_ws/devel/share/grasp_sampler/cmake/: grasp_samplerConfig.cmake
updated/catkin_ws/devel/share/task_assembly/cmake/: task_assembly-msg-extras.cmake  task_assembly-msg-paths.cmake  task_assemblyConfig.cmake
updated/catkin_ws/roi_extractor/: CMakeLists.txt
updated/catkin_ws/roi_extractor/include/roi_extractor/sampling/: cloud_camera.h  frame_estimator.h  plot.h
updated/catkin_ws/roi_extractor/src/: roiExtractor.cpp
updated/catkin_ws/roi_extractor/src/sampling/: antipodal.cpp  cloud_camera.cpp  eigen_utils.cpp  frame_estimator.cpp  local_frame.cpp  plot.cpp  point_list.cpp
updated/catkin_ws/src/: ifconfig
updated/catkin_ws/src/grasp_sampler/: CMakeLists.txt  TODO  package.xml
updated/catkin_ws/src/grasp_sampler/MODEL/: Handle.pcd  doorsample2.pcd
updated/catkin_ws/src/grasp_sampler/Vrep/: franka_panda.ttt  pandaTrajectory.csv
updated/catkin_ws/src/grasp_sampler/Vrep/Panda_Husky/: Panda_Husky_test.ttt  kinect_position_tset.txt
updated/catkin_ws/src/grasp_sampler/Vrep/workspace/: Affordance.ttt  Answer_scene.ttt  Castone_for_Middle.ttt  backup.ttt
updated/catkin_ws/src/grasp_sampler/include/grasp_sampler/: ArmPlanner.h  GraspSample.h  Kinematics.h  RRTNode.h  (+2 more)
updated/catkin_ws/src/grasp_sampler/launch/: grasp_sampler_client.launch  grasp_sampler_server.launch  test.launch
updated/catkin_ws/src/grasp_sampler/src/: ArmPlanner.cpp  GraspSamplerServer.cpp  Kinematics.cpp  RRTFunction.cpp  RosBridge.cpp  VrepBridge.cpp  arm_interface.cpp
updated/catkin_ws/src/grasp_sampler/trajectory_result/: afterSelfCollision
updated/grasp_sampler/: CMakeLists.txt  package.xml
updated/grasp_sampler/Vrep/: Husky_franka_basic_velocity.ttt  Panda_Husky_test.ttt  dd.ttt  test.csv
updated/grasp_sampler/Vrep/workspace/: Casptone.ttt  OurPCL_kinect _cloud_Test.ttt  OurPCL_kinect.ttt  OurPCL_kinect_test.ttt  paper_experiment.ttt  result_scene.ttt
updated/grasp_sampler/config/: hw_param.yaml
updated/grasp_sampler/include/grasp_sampler/: ArmPlanner.h  Fwd.h  GraspSample.h  Kinematics.h  RRTFunction.h  RosBridge.h  Utils.h  VrepBridge.h  arm_interface.h  pcl_headers.h
updated/grasp_sampler/launch/: cla  door_grasp_planner.launch  grasp_sampler_server.launch
updated/grasp_sampler/src/: ArmPlanner.cpp  GraspSample.cpp  GraspSamplerClient.cpp  GraspSamplerClient.txt  GraspSamplerServer.cpp  Kinematics.cpp  RosBridge.cpp  Utils.cpp  VrepBridge.cpp  arm_interface.cpp  main.cpp
updated/grasp_sampler/trajectory_result/: path.txt
updated/task_assembly/: CMakeLists.txt  package.xml
updated/task_assembly/srv/: door_open_planner.srv
(+92 files in other folders)
